# coordinator

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.sh  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
.hooks/: pre-commit
config/: default.toml
contrib/: docker-compose.yml
examples/: demo.rs  hyperclient.rs  rpc.rs  test_client.rs  test_rpc.rs
scripts/: api_request.sh  bitcoin-bash-tools.sh  createRequest.sh  create_request.sh  demo.sh  query.js  report.py
src/: api.rs  challenge.rs  challenger.rs  checks.rs  clientchain.rs  config.rs  coordinator.rs  daemon.rs  error.rs  lib.rs  listener.rs  main.rs  ocean.rs  payments.rs  request.rs  service.rs  storage.rs  testing_utils.rs
src/interfaces/: bid.rs  clientchain.rs  mod.rs  request.rs  response.rs  service.rs  storage.rs
src/interfaces/mocks/: clientchain.rs  mod.rs  service.rs  storage.rs
src/util/: checks.rs  doc_format.rs  handler.rs  mod.rs  ocean.rs  testing.rs
