[package]
name = "coordinator"
version = "0.1.0"
authors = ["nkostoulas <nkostoulas@gmail.com>"]
description = "Guardnode Coordinator implementation for the Commerceblock Covalence system"
homepage = "https://github.com/commerceblock"
repository = "https://github.com/commerceblock/coordinator"

[dependencies]
rust-ocean = { git = "https://github.com/commerceblock/rust-ocean"}
ocean-rpc = { git = "https://github.com/commerceblock/rust-ocean-rpc"}
bitcoin = { version = "0.15", features = [ "serde" ] }
