[package]
name = "coordinator"
version = "0.1.0"
authors = ["nkostoulas <nkostoulas@gmail.com>"]
description = "Guardnode Coordinator implementation for the Commerceblock Covalence system"
homepage = "https://github.com/commerceblock"
repository = "https://github.com/commerceblock/coordinator"

[dependencies]
log = "0.4"
env_logger = "0.6"
hyper = "0.12"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
rust-ocean = { git = "https://github.com/commerceblock/rust-ocean"}
ocean-rpc = { git = "https://github.com/commerceblock/rust-ocean-rpc"}
bitcoin = { version = "0.17", features = [ "serde-decimal" ] }
bitcoin_hashes = "0.3"
secp256k1 = "0.12.2"
