[package]
name = "coordinator"
version = "0.4.7"
authors = ["nkostoulas <nkostoulas@gmail.com>"]
description = "Guardnode Coordinator implementation for the Commerceblock Covalence system"
homepage = "https://github.com/commerceblock"
repository = "https://github.com/commerceblock/coordinator"

[dependencies]
log = "0.4"
base64 = "0.10.1"
env_logger = "0.6"
hyper = "0.12"
futures = "0.1"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
mongodb = "0.3.11"
jsonrpc-http-server = "14.0.5"
rust-ocean = { git = "https://github.com/commerceblock/rust-ocean"}
ocean-rpc = { git = "https://github.com/commerceblock/rust-ocean-rpc"}
bitcoin = { version = "0.20", features = [ "use-serde" ] }
